embed video responsively

--- a/public/index.html
+++ b/public/index.html
@@ -76,8 +76,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <div>
-                        <iframe src="https://fpdl.vimeocdn.com/vimeo-prod-skyfire-std-us/01/543/6/152719179/469530657.mp4?token=56a7bdc0_0x26d3a40b801556d34d8f11c369ef96e3b6039720&color=ffffff&title=0&byline=0&portrait=0" width="1000" height="562" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+                    <div class="embed-container">
+                        <iframe src="https://fpdl.vimeocdn.com/vimeo-prod-skyfire-std-us/01/543/6/152719179/469530657.mp4?token=56a7bdc0_0x26d3a40b801556d34d8f11c369ef96e3b6039720&color=ffffff&title=0&byline=0&portrait=0" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
                     </div>
                     <div class="intro-text">
                         <span class="name">SDBB OTP</span>
