add new movie and some text

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     <meta name="author" content="">
     <link href="favicon.ico" rel="favicon" type="image/x-icon"/>
 
-    <title>OTP - Online Test Plattform für die Berufsberatung</title>
+    <title>OTP - Berufsberatung 2.0</title>
 
     <link href="css/main.css" rel="stylesheet">
 
@@ -40,7 +40,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#page-top">SDBB OTP</a>
+                <a class="navbar-brand" href="#page-top">SDBB OTP - Berufsberatung 2.0</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -77,10 +77,10 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="embed-container">
-                        <iframe src="https://fpdl.vimeocdn.com/vimeo-prod-skyfire-std-us/01/543/6/152719179/469530657.mp4?token=56a7bdc0_0x26d3a40b801556d34d8f11c369ef96e3b6039720&color=ffffff&title=0&byline=0&portrait=0" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+                        <iframe src="https://www.youtube.com/embed/H9IWS-pjh9A" frameborder="0" allowfullscreen></iframe>
                     </div>
                     <div class="intro-text">
-                        <span class="name">SDBB OTP</span>
+                        <span class="name">SDBB OTP - Berufsberatung 2.0</span>
                         <hr class="star-light">
                         <span class="skills">Die Online Test Platform für Berufsberatung in der Schweiz</span>
                     </div>
@@ -98,7 +98,27 @@
                 </div>
             </div>
             <div class="row">
-
+                <p>
+                    Das <a href="http://sdbb.ch" target="_blank">Schweizerische Dienstleistungszentrum für Berufsbildung
+                    sowie Berufs-, Studien- und Laufbahnberatung (SDBB)</a> ist eine Institution der Schweizerischen
+                    Konferenz der kantonalen Erziehungsdirektoren (EDK).
+                </p>
+                <p>
+                    In dieser Funktion koordiniert das Zentrum unter Anderem die interkantonale Zusammenarbeit bei der
+                    Berufsberatung. Konkret bedeutet das auch, dass Tests der Berufsberatung unterhalten, weiterentwickelt
+                    und national verfügbar gemacht werden.
+                </p>
+                <p>
+                    Bis zur Entwicklung der OTP war dies keine einfache Aufgabe. Von einzelnen Tests gab es online Versionen,
+                    die meisten aber gab es nur auf Papier. Das hiess sowohl für Ratsuchende sowie BeraterInnen viel Papier,
+                    von Hand angefertigte Auswertungen, zusammenhangslose Links. Für das SDBB hiess dies grosse Produktionsaufwände,
+                    keine zentrale Datensammlung zur Analyse und Weiterentwicklung der verfahren, keine einfache Verrechnung
+                    der Benutzung von Tests an Beratungszentren und Kantone, etc..
+                </p>
+                <p>
+                    Der Wunsch nach einer zentralen Verwaltungsplatform mit der Möglichkeit, beliebige Testverfahren über
+                    eine einheitliche Schnittstelle anbinden zu können, ist leicht nachzuvollziehen.
+                </p>
             </div>
         </div>
     </section>
@@ -112,7 +132,24 @@
                 </div>
             </div>
             <div class="row">
-
+                <div class="col-lg-12">
+                    <p>
+                        Die Online Test Plattform (OTP) des SDBB digitalisiert und zentralisiert die Zuweisung, Durchführung sowie
+                        Auswertung von eignungsdiagnostischen Testverfahren schweizweit. Dabei geht es um eine Fülle von
+                        Eignungs- und Interessetests, welche Berufsberaterinnen und -beratern helfen, passende Berufsbilder
+                        für Schüler, Studenten und Erwachsene zu finden.
+                    </p>
+                    <p>
+                        Die OTP besteht aus einem Verwaltungsmodul und einer unbeschränkten Anzahl von unabhängig entwickelten
+                        Testverfahren. Das Verwaltungsmodul hat die folgenden Hauptmerkmale:
+                    </p>
+                    <li>
+                        <ul>Verwaltung der Testverfahren</ul>
+                        <ul>Verwaltung von Nutzer und Nutzergruppen</ul>
+                        <ul>Nutzungsstatistiken und Kostenzähler zur Verrechnung an Kantone und Beratungsstellen</ul>
+                        <ul>Verwaltung der Testdaten</ul>
+                    </li>
+                </div>
             </div>
         </div>
     </section>
@@ -126,7 +163,17 @@
                 </div>
             </div>
             <div class="row">
-
+                <ul>
+                    <li>Digitalisierung des Pen & Paper Approach (Kostensparen, erleichterter Zugang, Standardisierung)</li>
+                    <li>Automatische Auswertungen (mehr Effizienz)</li>
+                    <li>Statistisches Datenpool -> erlaubt schweizweite anonymisierte Auswertungen und Anpassungen an die Normen</li>
+                    <li>Standortunabhängigkeit & Notifikationsmanagement</li>
+                    <li>Homogenes Klientenmanagement</li>
+                    <li>Entkopplung der Testverfahren von der Administrationsplattform, Standardisierte Schnittstelle für Anbieter Unabhängigkeit</li>
+                    <li>Nutzungsstatistik & Abrechnung</li>
+                    <li>Berücksichtigung des Föderalismus und die Ermöglichung der Abbildung Kantonseigener Strukturen // Föderalistische Cloudlösung mit Datenhaltung in der Schweiz</li>
+                    <li>Endgerätunabhängig und responsive Design für die Testdurchführungen</li>
+                </ul>
             </div>
         </div>
     </section>
