fix some styles, add images

--- a/public/index.html
+++ b/public/index.html
@@ -98,27 +98,32 @@
                 </div>
             </div>
             <div class="row">
-                <p>
-                    Das <a href="http://sdbb.ch" target="_blank">Schweizerische Dienstleistungszentrum für Berufsbildung
-                    sowie Berufs-, Studien- und Laufbahnberatung (SDBB)</a> ist eine Institution der Schweizerischen
-                    Konferenz der kantonalen Erziehungsdirektoren (EDK).
-                </p>
-                <p>
-                    In dieser Funktion koordiniert das Zentrum unter Anderem die interkantonale Zusammenarbeit bei der
-                    Berufsberatung. Konkret bedeutet das auch, dass Tests der Berufsberatung unterhalten, weiterentwickelt
-                    und national verfügbar gemacht werden.
-                </p>
-                <p>
-                    Bis zur Entwicklung der OTP war dies keine einfache Aufgabe. Von einzelnen Tests gab es online Versionen,
-                    die meisten aber gab es nur auf Papier. Das hiess sowohl für Ratsuchende sowie BeraterInnen viel Papier,
-                    von Hand angefertigte Auswertungen, zusammenhangslose Links. Für das SDBB hiess dies grosse Produktionsaufwände,
-                    keine zentrale Datensammlung zur Analyse und Weiterentwicklung der verfahren, keine einfache Verrechnung
-                    der Benutzung von Tests an Beratungszentren und Kantone, etc..
-                </p>
-                <p>
-                    Der Wunsch nach einer zentralen Verwaltungsplatform mit der Möglichkeit, beliebige Testverfahren über
-                    eine einheitliche Schnittstelle anbinden zu können, ist leicht nachzuvollziehen.
-                </p>
+                <div class="col-lg-3">
+                    <img src="img/girl.png" height="400px" />
+                </div>
+                <div class="col-lg-9">
+                    <p>
+                        Das <a href="http://sdbb.ch" target="_blank">Schweizerische Dienstleistungszentrum für Berufsbildung
+                        sowie Berufs-, Studien- und Laufbahnberatung (SDBB)</a> ist eine Institution der Schweizerischen
+                        Konferenz der kantonalen Erziehungsdirektoren (EDK).
+                    </p>
+                    <p>
+                        In dieser Funktion koordiniert das Zentrum unter Anderem die interkantonale Zusammenarbeit bei der
+                        Berufsberatung. Konkret bedeutet das auch, dass Tests der Berufsberatung unterhalten, weiterentwickelt
+                        und national verfügbar gemacht werden.
+                    </p>
+                    <p>
+                        Bis zur Entwicklung der OTP war dies keine einfache Aufgabe. Von einzelnen Tests gab es online Versionen,
+                        die meisten aber gab es nur auf Papier. Das hiess sowohl für Ratsuchende sowie BeraterInnen viel Papier,
+                        von Hand angefertigte Auswertungen, zusammenhangslose Links. Für das SDBB hiess dies grosse Produktionsaufwände,
+                        keine zentrale Datensammlung zur Analyse und Weiterentwicklung der verfahren, keine einfache Verrechnung
+                        der Benutzung von Tests an Beratungszentren und Kantone, etc..
+                    </p>
+                    <p>
+                        Der Wunsch nach einer zentralen Verwaltungsplatform mit der Möglichkeit, beliebige Testverfahren über
+                        eine einheitliche Schnittstelle anbinden zu können, ist leicht nachzuvollziehen.
+                    </p>
+                </div>
             </div>
         </div>
     </section>
@@ -132,7 +137,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-lg-12">
+                <div class="col-lg-9">
                     <p>
                         Die Online Test Plattform (OTP) des SDBB digitalisiert und zentralisiert die Zuweisung, Durchführung sowie
                         Auswertung von eignungsdiagnostischen Testverfahren schweizweit. Dabei geht es um eine Fülle von
@@ -143,12 +148,15 @@
                         Die OTP besteht aus einem Verwaltungsmodul und einer unbeschränkten Anzahl von unabhängig entwickelten
                         Testverfahren. Das Verwaltungsmodul hat die folgenden Hauptmerkmale:
                     </p>
-                    <li>
-                        <ul>Verwaltung der Testverfahren</ul>
-                        <ul>Verwaltung von Nutzer und Nutzergruppen</ul>
-                        <ul>Nutzungsstatistiken und Kostenzähler zur Verrechnung an Kantone und Beratungsstellen</ul>
-                        <ul>Verwaltung der Testdaten</ul>
-                    </li>
+                    <ul>
+                        <li>Verwaltung der Testverfahren</li>
+                        <li>Verwaltung von Nutzer und Nutzergruppen</li>
+                        <li>Nutzungsstatistiken und Kostenzähler zur Verrechnung an Kantone und Beratungsstellen</li>
+                        <li>Verwaltung der Testdaten</li>
+                    </ul>
+                </div>
+                <div class="col-lg-3">
+                    <img src="img/cook.png" height="400px" />
                 </div>
             </div>
         </div>
@@ -163,17 +171,22 @@
                 </div>
             </div>
             <div class="row">
-                <ul>
-                    <li>Digitalisierung des Pen & Paper Approach (Kostensparen, erleichterter Zugang, Standardisierung)</li>
-                    <li>Automatische Auswertungen (mehr Effizienz)</li>
-                    <li>Statistisches Datenpool -> erlaubt schweizweite anonymisierte Auswertungen und Anpassungen an die Normen</li>
-                    <li>Standortunabhängigkeit & Notifikationsmanagement</li>
-                    <li>Homogenes Klientenmanagement</li>
-                    <li>Entkopplung der Testverfahren von der Administrationsplattform, Standardisierte Schnittstelle für Anbieter Unabhängigkeit</li>
-                    <li>Nutzungsstatistik & Abrechnung</li>
-                    <li>Berücksichtigung des Föderalismus und die Ermöglichung der Abbildung Kantonseigener Strukturen // Föderalistische Cloudlösung mit Datenhaltung in der Schweiz</li>
-                    <li>Endgerätunabhängig und responsive Design für die Testdurchführungen</li>
-                </ul>
+                <div class="col-lg-3">
+                    <img src="img/counselor.png" width="100%" />
+                </div>
+                <div class="col-lg-9">
+                    <ul>
+                        <li>Digitalisierung des Pen & Paper Approach (Kostensparen, erleichterter Zugang, Standardisierung)</li>
+                        <li>Automatische Auswertungen (mehr Effizienz)</li>
+                        <li>Statistisches Datenpool -> erlaubt schweizweite anonymisierte Auswertungen und Anpassungen an die Normen</li>
+                        <li>Standortunabhängigkeit & Notifikationsmanagement</li>
+                        <li>Homogenes Klientenmanagement</li>
+                        <li>Entkopplung der Testverfahren von der Administrationsplattform, Standardisierte Schnittstelle für Anbieter Unabhängigkeit</li>
+                        <li>Nutzungsstatistik & Abrechnung</li>
+                        <li>Berücksichtigung des Föderalismus und die Ermöglichung der Abbildung Kantonseigener Strukturen // Föderalistische Cloudlösung mit Datenhaltung in der Schweiz</li>
+                        <li>Endgerätunabhängig und responsive Design für die Testdurchführungen</li>
+                    </ul>
+                </div>
             </div>
         </div>
     </section>
