add content for facts and figures

--- a/public/index.html
+++ b/public/index.html
@@ -110,18 +110,19 @@
                     <p>
                         In dieser Funktion koordiniert das Zentrum unter Anderem die interkantonale Zusammenarbeit bei der
                         Berufsberatung. Konkret bedeutet das auch, dass Tests der Berufsberatung unterhalten, weiterentwickelt
-                        und national verfügbar gemacht werden.
+                        und auf nationaler Ebene verfügbar gemacht werden.
                     </p>
                     <p>
-                        Bis zur Entwicklung der OTP war dies keine einfache Aufgabe. Von einzelnen Tests gab es online Versionen,
-                        die meisten aber gab es nur auf Papier. Das hiess sowohl für Ratsuchende sowie BeraterInnen viel Papier,
-                        von Hand angefertigte Auswertungen, zusammenhangslose Links. Für das SDBB hiess dies grosse Produktionsaufwände,
-                        keine zentrale Datensammlung zur Analyse und Weiterentwicklung der verfahren, keine einfache Verrechnung
-                        der Benutzung von Tests an Beratungszentren und Kantone, etc..
+                        Bis zur Entwicklung der OTP war dies keine leichte Aufgabe. Von einzelnen Tests gab es z. T.
+                        veraltete online Versionen, die meisten aber gab es nur auf Papier. Das hiess sowohl für
+                        Ratsuchende sowie BeraterInnen viel Papier, von Hand angefertigte Auswertungen, zusammenhangslose Links.
+                        Für das SDBB hiess dies grosse Produktionsaufwände, keine zentrale Datensammlung zur Analyse und
+                        Weiterentwicklung der verfahren, keine einfache Verrechnung der Benutzung von Tests an
+                        Beratungszentren und Kantone, etc..
                     </p>
                     <p>
                         Der Wunsch nach einer zentralen Verwaltungsplatform mit der Möglichkeit, beliebige Testverfahren über
-                        eine einheitliche Schnittstelle anbinden zu können, ist leicht nachzuvollziehen.
+                        eine einheitliche Schnittstelle anbinden zu können, ist auf diesem Hintergrund leicht nachzuvollziehen.
                     </p>
                 </div>
             </div>
@@ -177,13 +178,14 @@
                 <div class="col-lg-9">
                     <ul>
                         <li>Digitalisierung des Pen & Paper Approach (Kostensparen, erleichterter Zugang, Standardisierung)</li>
-                        <li>Automatische Auswertungen (mehr Effizienz)</li>
-                        <li>Statistisches Datenpool -> erlaubt schweizweite anonymisierte Auswertungen und Anpassungen an die Normen</li>
+                        <li>Automatische Auswertungen (mehr Effizienz, weniger Fehleranfälligkeit)</li>
+                        <li>Zentrales Datenpool (ermöglicht schweizweite anonymisierte Auswertungen, vereinfacht Normierungen massiv)</li>
                         <li>Standortunabhängigkeit & Notifikationsmanagement</li>
                         <li>Homogenes Klientenmanagement</li>
-                        <li>Entkopplung der Testverfahren von der Administrationsplattform, Standardisierte Schnittstelle für Anbieter Unabhängigkeit</li>
-                        <li>Nutzungsstatistik & Abrechnung</li>
-                        <li>Berücksichtigung des Föderalismus und die Ermöglichung der Abbildung Kantonseigener Strukturen // Föderalistische Cloudlösung mit Datenhaltung in der Schweiz</li>
+                        <li>Entkopplung der Testverfahren dank Web-Schnittstelle (Unabhängigkeit von Testanbietern und -entwicklern)</li>
+                        <li>Nutzungsstatistiken & Abrechnungslogik (einfache, testübergreifende Nutzungsanalyse und Abrechnung)</li>
+                        <li>Flexibles Benutzer-, Gruppen- und Rechtesystem (Berücksichtigung des Föderalismus durch Abbildung kantonsspezifischer Strukturen)</li>
+                        <li>Föderalistische Cloudlösung mit Datenhaltung in der Schweiz</li>
                         <li>Endgerätunabhängig und responsive Design für die Testdurchführungen</li>
                     </ul>
                 </div>
@@ -200,7 +202,37 @@
                 </div>
             </div>
             <div class="row">
-
+                <div class="col-lg-7">
+                    <p>Hier würde ich so Zahlen wie die folgenden erfunden Zahlen bringen:</p>
+                    <ul>
+                        <li>135 BerufsberaterInnen</li>
+                        <li>aus X Kantonen</li>
+                        <li>und Y unabhängigen Beratungsstellen</li>
+                        <li>kümmern sich um 1023 Ratsuchende pro Jahr,</li>
+                        <li>weisen diesen 2356 Testverfahren zu</li>
+                        <li>während Z Administratoren blabla</li>
+                    </ul>
+                    <p>Tech Stack würde ich wohl weglassen und die API woanders noch etwas detaillierter beschreiben?</p>
+                </div>
+                <div class="col-lg-5">
+                    <h4>Die 14 bisher angebundenen Testverfahren</h4>
+                    <ul>
+                        <li>BFT22-J - Berufsfeldertest 22 Deutsch</li>
+                        <li>TDP22 - Berufsfeldertest 22 Französisch</li>
+                        <li>TCP22 - Berufsfeldertest 22 Italienisch</li>
+                        <li>F-I-T 2012 - Fotointeressetest in Deutsch</li>
+                        <li>T-I-P 2012 - Fotointeressetest in Französisch</li>
+                        <li>T-I-I 2012 - Fotointeressetest in Italienisch</li>
+                        <li>PGA - Gamper: Préférences générales d‘activités</li>
+                        <li>PMT - Gamper: Préférences pour les activités manuelles et techniques</li>
+                        <li>PRS - Gamper: Préférences d‘activités relationnelles et de services</li>
+                        <li>PEB - Gamper: Préférences études bachelors</li>
+                        <li>BPS - Gamper: Bilan Personelle Scolaire</li>
+                        <li>SIT 2 - SozialinteressetestAbgeschlossen</li>
+                        <li>BFT22-E - Berufsfeldertest für Erwachsene (DE)</li>
+                        <li>BRTA - Batterie romande de tests d’aptitudes</li>
+                    </ul>
+                </div>
             </div>
         </div>
     </section>
