--- a/public/index.html
+++ b/public/index.html
@@ -99,7 +99,7 @@
             </div>
             <div class="row">
                 <div class="col-lg-3">
-                    <img src="img/girl.png" height="400px" />
+                    <img src="img/girl.png" height="350px" />
                 </div>
                 <div class="col-lg-9">
                     <p>
@@ -155,9 +155,10 @@
                         <li>Nutzungsstatistiken und Kostenzähler zur Verrechnung an Kantone und Beratungsstellen</li>
                         <li>Verwaltung der Testdaten</li>
                     </ul>
+                    <p>Hier kommt noch mehr...</p>
                 </div>
                 <div class="col-lg-3">
-                    <img src="img/cook.png" height="400px" />
+                    <img src="img/cook.png" height="350px" />
                 </div>
             </div>
         </div>
@@ -246,7 +247,26 @@
                 </div>
             </div>
             <div class="row">
-
+                <div class="col-lg-4 text-center">
+                    <img src="img/nca-logo.gif" width="200" />
+                </div>
+                <div class="col-lg-4 text-center">
+                    <img src="img/sdbb-logo.gif" width="200" />
+                </div>
+                <div class="col-lg-4 text-center">
+                    <img src="img/cs-logo.png" width="200" />
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-4 text-center">
+                    <p>Beschreibung der Rolle</p>
+                </div>
+                <div class="col-lg-4 text-center">
+                    <p>Beschreibung der Rolle</p>
+                </div>
+                <div class="col-lg-4 text-center">
+                    <p>Beschreibung der Rolle</p>
+                </div>
             </div>
         </div>
     </section>
