add demo section

--- a/public/index.html
+++ b/public/index.html
@@ -64,6 +64,9 @@
                     <li class="page-scroll">
                         <a href="#involvierte">Involvierte</a>
                     </li>
+                    <li class="page-scroll">
+                        <a href="#involvierte">Demo</a>
+                    </li>
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
@@ -157,7 +160,7 @@
                     </ul>
                     <p>Hier kommt noch mehr...</p>
                 </div>
-                <div class="col-lg-3">
+                <div class="col-lg-3 text-right">
                     <img src="img/cook.png" height="350px" />
                 </div>
             </div>
@@ -241,31 +244,28 @@
     <section id="involvierte">
         <div class="container">
             <div class="row">
-                <div class="col-lg-12 text-center">
+                <div class="col-lg-6 text-center">
                     <h2>Involvierte</h2>
-                    <hr class="star-primary">
+                    <hr class="star-primary" />
+                </div>
+                <div class="col-lg-6 text-center">
+                    <h2>Demo-Zugänge</h2>
+                    <hr class="star-primary" />
                 </div>
             </div>
             <div class="row">
-                <div class="col-lg-4 text-center">
-                    <img src="img/nca-logo.gif" width="200" />
-                </div>
-                <div class="col-lg-4 text-center">
+                <div class="col-lg-6 text-center">
                     <img src="img/sdbb-logo.gif" width="200" />
-                </div>
-                <div class="col-lg-4 text-center">
+                    <p>Beschreibung der Rolle</p>
+                    <hr />
+                    <img src="img/nca-logo.gif" width="200" />
+                    <p>Beschreibung der Rolle</p>
+                    <hr />
                     <img src="img/cs-logo.png" width="200" />
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-lg-4 text-center">
                     <p>Beschreibung der Rolle</p>
                 </div>
-                <div class="col-lg-4 text-center">
-                    <p>Beschreibung der Rolle</p>
-                </div>
-                <div class="col-lg-4 text-center">
-                    <p>Beschreibung der Rolle</p>
+                <div class="col-lg-6 text-center">
+                    <p>Zugänge und Kurzanleitung einer typischen Handlung</p>
                 </div>
             </div>
         </div>
